# GraspVerification

./: .gitignore  README.md
src/grasp_verification/: CMakeLists.txt  package.xml
src/grasp_verification/common/include/grasp_verification/: grasp_verification.hpp
src/grasp_verification/common/src/: grasp_verification.cpp
src/grasp_verification/ros/include/grasp_verification/: grasp_verification_node.h~
src/grasp_verification/ros/include/grasp_verification_node/: grasp_verification_node.h
src/grasp_verification/ros/launch/: grasp_verification.launch~
src/grasp_verification/ros/src/: grasp_verification_node.cpp
